@startuml

class Editorial {
    - String nombre
    - String pais
    - ArrayList<Libro> librosPublicados
    + ArrayList<Libro> getLibrosPublicados()
    + void setLibrosPublicados(ArrayList<Libro> librosPublicados)
    + void anyadirLibro(Libro libro)
    + void borrarLibro(Libro libro)
}

class Estudiante {
    + static int contadorEstudiantes
    + static final String CORREO_VALIDO
    - String nombre
    - String curso
    - int nia
    - String email
    - ArrayList<Libro> librosPrestados
    + static int obtenerTotalEstudiantes()
    + String getNombre()
    + String getCurso()
    + int getNia()
    + String getEmail()
    + void setNombre(String nombre)
    + void setCurso(String curso)
    + void setEmail(String email)
    + ArrayList<Libro> getLibrosPrestados()
    + void setLibrosPrestados(ArrayList<Libro> librosPrestados)
    + void anyadirLibro(Libro libro)
    + void borrarLibro(Libro libro)
    + static boolean validarEmail(String email)
}

class Libro {
    + static int cantidadLibros
    + static int librosDisponibles
    + static final String ID_LIBROS
    - String titulo
    - String autor
    - String id
    - boolean disponible
    - Estudiante estudiantePrestado
    - Editorial editorial
    + Prestamo prestar(Estudiante estudiante)
    + void devolver(Estudiante estudiante)
    + boolean getDisponible()
    + void estaDisponible()
    + void setDisponible(boolean disponible)
    + String getId()
    + String getAutor()
    + void setAutor(String autor)
    + String getTitulo()
    + void setTitulo(String titulo)
    + static int getLibrosDisponibles()
    + static int getTotalLibros()
    + Estudiante getEstudiantePrestado()
    + void setEstudiantePrestado(Estudiante estudiantePrestado)
    + Editorial getEditorial()
    + void setEditorial(Editorial editorial)
}

class Prestamo {
    - Estudiante estudiante
    - Libro libro
    - LocalDate fecha
    + LocalDate getFecha()
    + Libro getLibro()
    + void setLibro(Libro libro)
    + Estudiante getEstudiante()
    + void setEstudiante(Estudiante estudiante)
}

Editorial "1" o-- "*" Libro : publica
Estudiante "1" o-- "1" Libro : presta
Libro "1" o-- "1" Prestamo : pertenece
Estudiante "1" o-- "1" Prestamo : realiza

@enduml